# whisperx-asr-service-custom

./: .env.example  .gitmodules  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: contract.py  main.py  openai_compat.py  pipeline.py  queue.py  serve_app.py  serve_deployments.py  upload.py  version.py
docs/input/: offline-backend-contract.md  whisper-contract-adoption.md
plans/: 001-streaming-file-uploads.md  002-pipeline-thread-safety.md  003-cross-request-batching-with-priority.md  004-expose-all-asr-vad-options.md  005-standalone-diarize-endpoint.md  006-offline-backend-contract.md
