[project]
name = "whisperx-asr-service"
version = "0.3.1"
description = "FastAPI service wrapping WhisperX for ASR, alignment, and diarization"
requires-python = ">=3.9, <3.14"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "whisperx",
]

[project.optional-dependencies]
gpu = []

[tool.uv.sources]
whisperx = { path = "./whisperx-custom", editable = true }
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu130", marker = "sys_platform != 'darwin' and platform_machine == 'x86_64'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'darwin' and platform_machine != 'x86_64'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu130", marker = "sys_platform != 'darwin' and platform_machine == 'x86_64'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'darwin' and platform_machine != 'x86_64'" },
]
triton = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
